# ductile-discord

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ductile-discord.service  ductile_discord.py  example.config.yaml  pyproject.toml  read_messages.py
.goose/: ralph_start.sh
.goose/ralph/: review-feedback.txt  task.md
